bugfixes (mainly FindBugs fixes) fixes for build.xml